{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 185,
  "lineage": "4c9d337a-6544-552e-6dc2-6065288d225c",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "kubernetes_ingress_v1",
      "name": "ingress",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/group.name": "phdi-playground-dev",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"alb.ingress.kubernetes.io/group.name\":\"phdi-playground-dev\",\"alb.ingress.kubernetes.io/scheme\":\"internet-facing\",\"alb.ingress.kubernetes.io/target-type\":\"ip\"},\"name\":\"ingress\",\"namespace\":\"default\"},\"spec\":{\"ingressClassName\":\"alb\",\"rules\":[{\"http\":{\"paths\":[{\"backend\":{\"service\":{\"name\":\"phdi-p [...]
                },
                "generation": 1,
                "labels": {},
                "name": "ingress",
                "namespace": "default",
                "resource_version": "4626",
                "uid": "ad5ad346-ce05-434a-b809-571e56df887e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "phdi-playground-dev-ingestion-ingestion-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/ingestion",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "phdi-playground-dev-fhir-converter-fhir-converter-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/fhir-converter",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "phdi-playground-dev-message-parser-message-parser-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/message-parser",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "phdi-playground-dev-validation-validation-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/validation",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "phdi-playground-dev-orchestration-orchestration-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/orchestration",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-phdiplaygrounddev-1f5c307cc0-429276606.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:network-acl/acl-05aa5cb2be2374485",
            "default_network_acl_id": "acl-05aa5cb2be2374485",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05aa5cb2be2374485",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "339712971032",
            "subnet_ids": [
              "subnet-0207a791395ea9e6a",
              "subnet-03dc93e35e89c30a9",
              "subnet-0a1ab89a7bc3b277d",
              "subnet-0a5d3711377dc6c17"
            ],
            "tags": {
              "Name": "phdi-playground-dev-default",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-default",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:route-table/rtb-04aaecd743f5f3223",
            "default_route_table_id": "rtb-04aaecd743f5f3223",
            "id": "rtb-04aaecd743f5f3223",
            "owner_id": "339712971032",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "phdi-playground-dev-default",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-default",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:security-group/sg-06396cb400c572487",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06396cb400c572487",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "339712971032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "phdi-playground-dev-security-group",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-security-group",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067bc0fb243939301",
            "association_id": "eipassoc-01f80847a7bf8278d",
            "domain": "vpc",
            "id": "eipalloc-067bc0fb243939301",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bb82e033a3ee835b",
            "private_dns": "ip-176-24-2-40.ec2.internal",
            "private_ip": "176.24.2.40",
            "public_dns": "ec2-18-215-86-35.compute-1.amazonaws.com",
            "public_ip": "18.215.86.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "phdi-playground-dev-us-east-1a",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-us-east-1a",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:internet-gateway/igw-0633fae05665b6edb",
            "id": "igw-0633fae05665b6edb",
            "owner_id": "339712971032",
            "tags": {
              "Name": "phdi-playground-dev",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067bc0fb243939301",
            "association_id": "eipassoc-01f80847a7bf8278d",
            "connectivity_type": "public",
            "id": "nat-03b93b5c157655aa9",
            "network_interface_id": "eni-0bb82e033a3ee835b",
            "private_ip": "176.24.2.40",
            "public_ip": "18.215.86.35",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0207a791395ea9e6a",
            "tags": {
              "Name": "phdi-playground-dev-us-east-1a",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-us-east-1a",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e634b1c36606c2f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03b93b5c157655aa9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e634b1c36606c2f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0633fae05665b6edb",
            "id": "r-rtb-0469d497cdbccd35d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0469d497cdbccd35d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:route-table/rtb-00e634b1c36606c2f",
            "id": "rtb-00e634b1c36606c2f",
            "owner_id": "339712971032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03b93b5c157655aa9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "phdi-playground-dev-private",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-private",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:route-table/rtb-0469d497cdbccd35d",
            "id": "rtb-0469d497cdbccd35d",
            "owner_id": "339712971032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0633fae05665b6edb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "phdi-playground-dev-public",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-public",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04794e5136f54fd68",
            "route_table_id": "rtb-00e634b1c36606c2f",
            "subnet_id": "subnet-0a5d3711377dc6c17"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072d2aeff3e4e5a36",
            "route_table_id": "rtb-00e634b1c36606c2f",
            "subnet_id": "subnet-0a1ab89a7bc3b277d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b176bde9c4013ab2",
            "route_table_id": "rtb-0469d497cdbccd35d",
            "subnet_id": "subnet-0207a791395ea9e6a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d1b1f7deb8fc3c",
            "route_table_id": "rtb-0469d497cdbccd35d",
            "subnet_id": "subnet-03dc93e35e89c30a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:subnet/subnet-0a5d3711377dc6c17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "176.24.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5d3711377dc6c17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712971032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phdi-playground-dev-private-us-east-1a",
              "karpenter.sh/discovery": "phdi-playground-dev",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-private-us-east-1a",
              "Owner": "Skylight",
              "karpenter.sh/discovery": "phdi-playground-dev",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:subnet/subnet-0a1ab89a7bc3b277d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "176.24.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1ab89a7bc3b277d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712971032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phdi-playground-dev-private-us-east-1b",
              "karpenter.sh/discovery": "phdi-playground-dev",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-private-us-east-1b",
              "Owner": "Skylight",
              "karpenter.sh/discovery": "phdi-playground-dev",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:subnet/subnet-0207a791395ea9e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "176.24.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0207a791395ea9e6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712971032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phdi-playground-dev-public-us-east-1a",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-public-us-east-1a",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:subnet/subnet-03dc93e35e89c30a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "176.24.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dc93e35e89c30a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712971032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phdi-playground-dev-public-us-east-1b",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev-public-us-east-1b",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ce2209f49b6b97ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712971032:vpc/vpc-0ce2209f49b6b97ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "176.24.0.0/16",
            "default_network_acl_id": "acl-05aa5cb2be2374485",
            "default_route_table_id": "rtb-04aaecd743f5f3223",
            "default_security_group_id": "sg-06396cb400c572487",
            "dhcp_options_id": "dopt-0352bada9f8e105d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce2209f49b6b97ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04aaecd743f5f3223",
            "owner_id": "339712971032",
            "tags": {
              "Name": "phdi-playground-dev",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "phdi-playground-dev",
              "Owner": "Skylight",
              "kubernetes.io/cluster/phdi-playground-dev": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}